# MT_CKD

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  setup.py
conda/: meta.yaml
mt_ckd/: __init__.py  carbon_dioxide.py  mt-ckd.nc  mt_ckd.py  mtckd-data.py  nitrogen.py  oxygen.py  ozone.py  utils.py  water_vapor.py
src/: co2_continuum.f90  continuum.f90  h2o_continuum.f90  main.f90  n2_continuum.f90  o2_continuum.f90  o3_continuum.f90  utils.f90
tests/: co2.nc  h2o-foreign.nc  h2o-self.nc  n2.nc  o2.nc  o3.nc  run-test.sh  test_mt_ckd.py
